--- a/p63_0.46.html
+++ b/p63_0.46.html
@@ -188,6 +188,28 @@
     .start-grid{ display:grid; grid-template-columns:1fr 1fr; gap:10px; margin-top:12px; }
     @media (max-width: 420px){ .start-grid{ grid-template-columns:1fr; } .start-actions{ grid-template-columns:1fr; } }
 
+    .intro-plasma-layer{
+      position: fixed;
+      inset: 0;
+      z-index: 1;
+      pointer-events: none;
+      opacity: 0;
+      transition: opacity 420ms ease;
+    }
+    .intro-plasma-layer.show{ opacity: 1; }
+    .intro-plasma-layer.fade-out{ opacity: 0; }
+    .intro-plasma-canvas{ position:absolute; inset:0; width:100%; height:100%; }
+
+    .intro-screen-wrap{
+      position: relative;
+      min-height: calc(100vh - var(--hud-offset) - 24px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 16px 10px 30px;
+      z-index: 2;
+    }
+
     .rules-wrap{ display:flex; flex-direction:column; gap:12px; }
     .rules-h{ font-family: var(--font-display); letter-spacing: 1px; margin: 0; }
     .rules-ul{ margin: 0; padding-left: 18px; color: var(--text-secondary); }
@@ -1921,6 +1943,10 @@
     </div>
   </div>
 
+  <div id="introPlasmaLayer" class="intro-plasma-layer" aria-hidden="true">
+    <canvas id="introPlasma" class="intro-plasma-canvas"></canvas>
+  </div>
+
   <header id="hud"></header>
 
   <main id="app">
@@ -2125,7 +2151,7 @@ const CALLING_RANK_THRESHOLDS = [
     // STARTER SCREEN
     // =============================================
     const START_PLASMA_CONFIG = {
-      speed: 0.85, intensity: 1.25, scale: 1.6,
+      speed: 1.00, intensity: 1.25, scale: 1.6,
       colors: [
         [0.0588, 0.0667, 0.0980],
         [0.1490, 0.1137, 0.0510],
@@ -2163,9 +2189,41 @@ const CALLING_RANK_THRESHOLDS = [
     }
 
     let startPlasma = null;
+    let introPlasma = null;
+    let introPlasmaFading = false;
     let uiView = 'start';
     function initStartPlasma(){ const c=document.getElementById('startPlasma'); if (!c) return; startPlasma = new StartPlasma2D(c, START_PLASMA_CONFIG); }
-    function showStartScreen(){ uiView = 'start'; const el=document.getElementById('startScreen'); if (el) el.style.display='flex'; if (startPlasma) startPlasma.start(); setTimeout(updateStartRunCard, 0); }
+    function initIntroPlasma(){ const c=document.getElementById('introPlasma'); if (!c) return; introPlasma = new StartPlasma2D(c, START_PLASMA_CONFIG); }
+    function showIntroPlasma(){
+      const layer = document.getElementById('introPlasmaLayer');
+      if (!layer) return;
+      introPlasmaFading = false;
+      layer.classList.remove('fade-out');
+      layer.classList.add('show');
+      if (introPlasma) introPlasma.start();
+    }
+    function hideIntroPlasmaImmediate(){
+      const layer = document.getElementById('introPlasmaLayer');
+      if (layer) {
+        layer.classList.remove('show');
+        layer.classList.remove('fade-out');
+      }
+      introPlasmaFading = false;
+      if (introPlasma) introPlasma.stop();
+    }
+    function fadeOutIntroPlasmaAndStop(){
+      const layer = document.getElementById('introPlasmaLayer');
+      if (!layer) return;
+      introPlasmaFading = true;
+      layer.classList.add('fade-out');
+      layer.classList.remove('show');
+      setTimeout(() => {
+        if (introPlasma) introPlasma.stop();
+        if (layer) layer.classList.remove('fade-out');
+        introPlasmaFading = false;
+      }, 460);
+    }
+    function showStartScreen(){ uiView = 'start'; const el=document.getElementById('startScreen'); if (el) el.style.display='flex'; hideIntroPlasmaImmediate(); if (startPlasma) startPlasma.start(); setTimeout(updateStartRunCard, 0); }
     function hideStartScreen(){ uiView = 'game'; const el=document.getElementById('startScreen'); if (el) el.style.display='none'; if (startPlasma) startPlasma.stop(); }
     function updateStartRunCard(){
       const sum = document.getElementById('startRunSummary');
@@ -9284,9 +9342,12 @@ run.chips = safeNumber(run.chips) + payout + transferNet - rake;
       endScreen.classList.add('hidden');
 
       if (run.ui.mode === 'INTRO') {
+        showIntroPlasma();
         renderIntro();
         return;
       }
+
+      if (!introPlasmaFading) hideIntroPlasmaImmediate();
 
       const available = getAvailableMoves();
       const isStarting = run.board.currentTileId === null;
@@ -9707,7 +9768,7 @@ run.chips = safeNumber(run.chips) + payout + transferNet - rake;
         `;
       }
 
-      boardView.innerHTML = body;
+      boardView.innerHTML = `<div class="intro-screen-wrap">${body}</div>`;
 
       if (step === 'reveal') {
         requestAnimationFrame(() => setupCallingCardRevealInteractions());
@@ -9747,6 +9808,7 @@ run.chips = safeNumber(run.chips) + payout + transferNet - rake;
 
     window.introEnterTower = function() {
       if (__ccReveal && __ccReveal.cleanup) __ccReveal.cleanup();
+      fadeOutIntroPlasmaAndStop();
       logEvent('CALLING_CARD_SET', { callingCard: run.callingCard });
       logEvent('GAME_START', {
         startingChips: STARTING_CHIPS,
@@ -10905,6 +10967,7 @@ run.chips = safeNumber(run.chips) + payout + transferNet - rake;
       setupActionTooltip();
       setupTileTooltip();
       initStartPlasma();
+      initIntroPlasma();
       initRun();
       const c=document.getElementById('btnContinue'); if (c) c.onclick = () => { hideStartScreen(); renderAll(); };
       const n=document.getElementById('btnNewRun'); if (n) n.onclick = () => { initRun(); hideStartScreen(); };
