--- a/p63_infiltration-run.html
+++ b/p63_infiltration-run.html
@@ -224,8 +224,10 @@
     .card.tool-locked { border-color: rgba(212,175,55,0.75); }
     .card.cover-spent { opacity: 0.80; border-color: rgba(94, 140, 97, 0.45); }
 
-    .card.red-suit   .cv, .card.red-suit   .cs { color: var(--card-red); }
-    .card.black-suit .cv, .card.black-suit .cs { color: var(--card-black); }
+    .card.red-suit   .cv, .card.red-suit   .cs,
+    .card.red-suit   .big-suit, .card.red-suit .big-val { color: var(--card-red); }
+    .card.black-suit .cv, .card.black-suit .cs,
+    .card.black-suit .big-suit, .card.black-suit .big-val { color: var(--card-black); }
 
     .corner { position: absolute; display: flex; flex-direction: column; align-items: center; line-height: 1; font-family: var(--font-mono); }
     .corner.tl { top: 8px; left: 10px; }
